# py_semtools

./: .coveragerc  .gitignore  CONTRIBUTING.rst  LICENSE.txt  MANIFEST.in  README.rst  setup.cfg  setup.py  tox.ini
docs/: conf.py  index.rst
py_semtools/: __init__.py  file_parser.py  json_parser.py  oboparser.py  ontology.py  py_semtools.py  sim_handler.py
py_semtools/parsers/: oboparser.py
src/py_semtools/: __init__.py  cli_manager.py  cons.py  json_parser.py  main_modules.py  oboparser.py  ontology.py  parallelizer.py  report_ont.py  sim_handler.py  stEngine.py  text_indexer.py  text_pubmed_abstract_parser.py  text_pubmed_paper_parser.py  text_pubmed_parser.py
src/py_semtools/external_data/: ontologies.txt
src/py_semtools/indexers/: text_indexer.py
src/py_semtools/parsers/ont/: file_parser.py  json_parser.py  oboparser.py
src/py_semtools/parsers/text/: text_basic_parser.py  text_pubmed_abstract_parser.py  text_pubmed_paper_parser.py  text_pubmed_parser.py
src/py_semtools/templates/: comorb_sugg.txt  makeTermFreqTable.txt  ontoICdist.txt  ontodist.txt  ontoplot.txt  plotClust.txt  plotProfRed.txt  report.txt  similarity_heatmap.txt  similarity_matrix.txt  stEngine.txt
test/: test_jsonparser.py  test_oboparser.py  test_ontology.py  test_semtools.py  test_similitudes.py
test/data/: go-onlyOne.obo  only_header_sample.obo  sparse2_sample.obo  sparse_sample.obo
tests/: conftest.py  test_cli_manager.py  test_go.py  test_oboparser.py  test_ontology.py  test_pubmed_abs_parser.py  test_pubmed_pap_parser.py  test_pubmed_text_parser.py  test_similitudes.py  test_stengine.py  test_text_indexer.py
tests/cli_examples/: launch.sh  template.txt
tests/data/: branched.obo  circular_sample.obo  enrichment_ontology.obo  enrichment_ontology2.obo  enrichment_ontology3.obo  go-basic_sample.obo  hierarchical_alt_chain.obo  hierarchical_sample.obo  only_header_sample.obo  sparse2_sample.obo  sparse_sample.obo
tests/data/get_sorted_profs/: report.txt
tests/data/get_sorted_suggestions/expected/: filter_target_and_query_parentals.txt  filter_target_parentals.txt  no_filter_limit_2.txt  no_filter_no_limit.txt
tests/data/get_sorted_suggestions/input_data/: enrichment_ontology3.obo  query_hps.txt  relations.txt
tests/data/input_scripts/: cleaned_profiles_3845734875  profiles  profiles_2cols  profiles_with_removedTerms  string_values  terms  terms_for_xref  terms_list
tests/data/ref_output_scripts/: blacklisted.txt  cleaned_profiles  cleaned_profiles_2cols  expanded_profiles  expected_IC_ont  parental_from_terms  profile_stats  profiles_IC_onto_freq  strsimnet  strsimnet_cutoff2  terms_attr  translated_profiles_names  translated_terms_codes  white_and_blacklisted.txt  whitelisted.txt
tests/data/stEngine/expected/raw_indexes/abstracts/: single_abs_text
tests/data/stEngine/expected/raw_indexes/abstracts/chunk1/: 22981089  22981091  None
tests/data/stEngine/expected/raw_indexes/papers/chunk1/: 18382669  31356151  35042469  None
tests/data/stEngine/expected/ready_indexes/abstracts/: single_abs_index_split
tests/data/stEngine/expected/ready_indexes/papers/: single_pap_index_nonsplit  single_pap_index_split
tests/data/stEngine/inputs/: blacklisted_words3.txt  example.xml
tests/data/stEngine/inputs/abstracts/: single_abstract.xml
tests/data/stEngine/inputs/papers/: single_paper.xml
tests/data/stEngine/inputs/prepared_indexes/queries/: hpo_list  mondo_list
tests/data/st_engine_report/: abs_profiles.txt  pmids_and_titles.txt
tests/demo_examples/: launch.sh  launch_plots.py  profiles_freqs.html  template.txt
tests/demo_examples/data/: profiles.txt  ref_profile.txt
